tests/data/placebo/test_emr_sg/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Member group for Elastic MapReduce",
                "GroupName": "ElasticMapReduce-Member-Private",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-cfcf69c3",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "NetworkLocation",
                        "Value": "CustFacing,EntFacing"
                    }
                ],
                "VpcId": "vpc-xxxxxxxx"
            }
        ],
        "ResponseMetadata": {}
    }
}
